rm'd etl key and readded correct file name to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Settings or config
-etlproject-320022-724440c0beac.json
-etlproject-320022-724440c0beac
+etlproject.json
+etlproject
 settings
 settings.py
 
